[package]
name = "this-repo-has-many-stars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
octocrab = "0.16.0"
reqwest = "0.11.11"
serde_json = "1.0.82"
tokio = { version = "1.20.0", features = ["rt", "rt-multi-thread", "macros", "time"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
